--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
         <button type="submit">Search</button>
       </form>
       <ul class="gallery"></ul>
-      <div class="loader" aria-hidden="true"></div>
+      <span class="loader" aria-hidden="true"></span>
     </main>
     <script type="module" src="./main.js"></script>
   </body>
